kong_files/kong_service_httpbin.yaml
###############################
## Httpbin Server
###############################
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
  annotations:
    konghq.com/plugins: httpbin-hmac-auth #httpbin-key-auth, httpbin-basic-auth
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        name: httpbin
        ports:
        - containerPort: 80

###############################
## Httpbin Server - Redis
###############################
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-2
  labels:
    app: httpbin-2
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: httpbin-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-2
  template:
    metadata:
      labels:
        app: httpbin-2
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        name: httpbin-2
        ports:
        - containerPort: 80
